removed span around typewriter to fix bouncing title, reduced number of projects, wrapped project squares in anchor tag to link to deployed site

--- a/client/src/Components/ProjectSquare/ProjectSquare.scss
+++ b/client/src/Components/ProjectSquare/ProjectSquare.scss
@@ -17,6 +17,13 @@
    
 }
 
+.project-square-link {
+    color: white;
+}
+
+a:link {
+    padding: 0px;
+}
 .project-square:hover {
     box-shadow: $hover-shadow;
 
