--- a/client/src/Pages/Portfolio/Portfolio.scss
+++ b/client/src/Pages/Portfolio/Portfolio.scss
@@ -31,22 +31,7 @@
     grid-row-end: 3;
     grid-column-start: 1;
     grid-column-end: 2;
-    justify-content: space-around;
+    justify-content: center;
     margin-bottom: $space;
     
 }
-.port-images2 {
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    /* flex-grow: 1fr; */
-    grid-row-start: 3;
-    grid-row-end: 4;
-    grid-column-start: 1;
-    grid-column-end: 2;
-    justify-content: center;
-}
-/* .Image {
-    width: 80%;
-    
-} */
